[project]
name = "hastin"
version = "0.0.1"
description = "PostgreSQL TUI monitoring dashboard"
license = "GPL-3.0-or-later"
requires-python = ">=3.11"
dependencies = [
    "rich>=14.2.0",
    "psycopg[binary,pool]>=3.2",
    "packaging>=25.0",
    "requests>=2.32.5",
    "sqlparse>=0.5.5",
    "textual>=6.11.0",
    "plotext>=5.3.2",
    "zstandard>=0.25.0",
    "loguru>=0.7.3",
    "orjson>=3.10.15",
    "psutil>=7.1.3",
]

[project.optional-dependencies]
aws = ["boto3>=1.34"]
gcp = ["google-cloud-monitoring>=2.18"]
azure = ["azure-monitor-query>=1.2", "azure-identity>=1.15"]
cloud = [
    "boto3>=1.34",
    "google-cloud-monitoring>=2.18",
    "azure-monitor-query>=1.2",
    "azure-identity>=1.15",
]

[dependency-groups]
dev = [
    "pytest>=8.3.5",
    "ruff>=0.9.0",
]

[project.scripts]
hastin = "hastin.App:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
package = true

[tool.hatch.build.targets.wheel]
packages = ["hastin"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.format]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort - import sorting
    "N",      # pep8-naming - naming conventions
    "UP",     # pyupgrade - use modern Python syntax (3.11+)
    "ASYNC",  # flake8-async - async/await best practices
    "B",      # flake8-bugbear - likely bugs and design problems
    "C4",     # flake8-comprehensions - better comprehensions
    "DTZ",    # flake8-datetimez - timezone-aware datetimes
    "SIM",    # flake8-simplify - simplification suggestions
    "PT",     # flake8-pytest-style - pytest best practices
    "ARG",    # flake8-unused-arguments - catch unused function arguments
    "FA",     # flake8-future-annotations - require `from __future__ import annotations`

    # --- New Rules ---
    "D",      # pydocstyle - docstring conventions
    "ANN",    # flake8-annotations - enforce type annotations
    "T20",    # flake8-print - detect print statements
    "ISC",    # flake8-implicit-str-concat - implicit string concatenation
]

ignore = [
    # --- Formatter compatibility ---
    "ISC001",    # Implicit string concatenation

    # --- Intentional naming conventions ---
    "N811",      # Constant imported as non-constant
    "N815",      # Mixed case variable in class scope
    "N818",      # Exception name should end with Error
    "N999",      # Invalid module name

    # --- Code patterns requiring refactoring ---
    "ARG002",    # Unused method argument
    "ARG005",    # Unused lambda argument
    "B007",      # Unused loop control variable
    "SIM102",    # Collapsible if statements
    "SIM105",    # Use contextlib.suppress
    "SIM115",    # Use context manager
    "SIM117",    # Combine with statements

    # --- Async patterns ---
    "ASYNC110",  # Async busy wait
    "ASYNC230",  # Blocking open in async

    # --- Annotation ignores ---
    "ANN001",    # Missing type annotation for function argument
    "ANN002",    # Missing type annotation for *args
    "ANN003",    # Missing type annotation for **kwargs
    "ANN201",    # Missing return type for public function
    "ANN202",    # Missing return type for private function
    "ANN204",    # Missing return type for special method
    "ANN206",    # Missing return type for classmethod

    # --- Documentation ignores ---
    "D100",      # Missing docstring in public module
    "D101",      # Missing docstring in public class
    "D102",      # Missing docstring in public method
    "D103",      # Missing docstring in public function
    "D104",      # Missing docstring in public package
    "D105",      # Missing docstring in magic method
    "D107",      # Missing docstring in __init__
    "D205",      # 1 blank line required between summary line and description
    "D417",      # Missing argument description in docstring
]

# Per-file ignores
[tool.ruff.lint.per-file-ignores]
"tests/*" = ["T20", "ANN", "D"]

[tool.ruff.lint.isort]
section-order = ["future", "standard-library", "third-party", "first-party", "local-folder"]
known-first-party = ["hastin"]

[tool.ruff.lint.flake8-pytest-style]
fixture-parentheses = false
mark-parentheses = false

[tool.ruff.lint.pydocstyle]
convention = "google"
